--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-  @apply bg-gray-900;
+  @apply bg-gray-900 text-white;
 
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
